--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,9 @@
 header {
     width: 100vw;
-    background-color: lightgrey;
+    background-color: rgb(252, 252, 228);
     justify-content: center;
     position: fixed;
+    box-shadow: 0px 0px 9px 1px lightgrey;
     
 }
 nav {
@@ -14,33 +15,33 @@ nav {
 li{
     margin: 0em 1em;
 }
-.boton{
+.button{
     padding: 0.5em;
 }
-.boton:active {
+.button:active {
     /*border: 1px solid black;*/
     border-radius: 25px;
-    box-shadow: 0px 0px 2px 2px lightseagreen;
+    box-shadow: 0px 0px 2px 2px #F7643B;
 }
-.colorancla {
+.coloranchor {
     color: #2e2e31;
     
 }
-.colorancla:hover {
-    color: cornflowerblue;
+.coloranchor:hover {
+    color: #F7643B;
     transition: 0.4s;
     
 }
-.botoncontacto {
+.contactbutton {
     padding: 0.5em 1.75em;
     border-radius: 25px;
-    background-color: lightseagreen;
+    background-color: #F7643B;
 }
-.colorcontacto {
+.buttoncolor {
     color: white;
 }
-.botoncontacto:hover {
-    background-color: lightseagreen;
+.contactbutton:hover {
+    background-color: #F7643B;
     opacity: 0.7;
     transition: 0.4s;
 }
