--- a/styles/style.css
+++ b/styles/style.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'IBM Plex Sans';
+    font-family: 'Raleway';
 }
 
 .flex {
     display: flex;
     flex-direction: row;   
 }
-.columna {
+.column {
     display: flex;
     flex-direction: column;
 }
