--- a/styles/section.css
+++ b/styles/section.css
@@ -1,4 +1,4 @@
-section {
+.section-about {
     width: 100vw;
     height: 50em;
     display: flex;
@@ -6,3 +6,12 @@ section {
     align-items: center;
     padding: 6em;
 }
+.section-skills {
+    width: 100vw;
+    padding: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
