--- a/styles/skills.css
+++ b/styles/skills.css
@@ -5,3 +5,14 @@
     align-items: center;
     padding: 3em;
 }
+.conocimientos{
+    font-size: 3em;
+    font-weight: 900;
+}
+.loremsize {
+    font-size: 1em;
+    padding: 2em 3.5em 0em 3.5em;
+}
+
+    
+
