--- a/styles/section.css
+++ b/styles/section.css
@@ -1,20 +1,39 @@
+.section-titlebox {
+    /*border: 1px solid black;*/
+    width: 37.5em;
+    display: flex;
+    align-items: center;
+    padding: 3em;
+}
+.section-titletext{
+    font-size: 3em;
+    font-weight: 900;
+}
 .section-about {
     width: 100vw;
-    height: 50em;
-    display: flex;
+    height: 40em;
     justify-content: center;
     align-items: center;
-    padding: 5em;
-    
+    padding: 5em;    
 }
 .section-skills {
     width: 100vw;
     padding: 4em;
-    display: flex;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
     background-color: #F6F7FB;
 }
-
+.section-quote {
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    background-color: #F7643B;
+    padding: 5em 13em 5em 13em;
+}
+.section-projects{
+    width: 100vw;
+    padding: 4em;
+    justify-content: center;
+    align-items: center;
+}
 
