sección projects casi terminada, hice la mitad de la última sección

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,15 +8,15 @@ header {
 }
 nav {
     justify-content: flex-end;
-    padding: 2em 0em;
+    padding: 32px 0em;
     width: 100%;
     max-width: 1100px;
 }
 li{
-    margin: 0em 1em;
+    margin: 0px 16px;
 }
 .button{
-    padding: 0.5em;
+    padding: 8px;
 }
 .button:active {
     /*border: 1px solid black;*/
@@ -33,7 +33,7 @@ li{
     
 }
 .contactbutton {
-    padding: 0.5em 1.75em;
+    padding: 8px 28px;
     border-radius: 25px;
     background-color: #F7643B;
 }
