--- a/styles/about.css
+++ b/styles/about.css
@@ -1,22 +1,23 @@
 .about {
     /*border: 1px solid black;*/
-    width: 75em;
+    width: 100%;
     height: 100vh; /*40em*/
     display: flex ; 
     justify-content: space-around;
     align-items: center;
-    padding: 4em
+    /*padding:0px*/
 
 }
 .hello{
     /*border: 1px solid black;*/
     height: 100%;
     width: 50%;
-    padding: 2em;
+    /*padding: 2em;*/
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+    margin-left: 35px;
 }
 .hola {
     font-size: 2.5em;
@@ -26,16 +27,16 @@
     font-size: 4.5em;
     font-weight: 900;
     color: #F7643B;
-    margin-bottom: 0.2em;
+    margin-bottom: 3.2px;
 }
 .description {
     font-size: 1.2em;
-    margin-bottom: 3em;
+    margin-bottom: 48px;
 }
 .weight500 {
     font-weight: 500;
 }
 .imagesize {
-    width: 20em;
-    height: 20em;
+    width: 480px;
+    margin: 0px 50px 50px;
 }
