--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,28 +1,33 @@
 .projectcards-container {
-    border: 1px solid black;
-    width: 75em;
-    height: 61em;
-    display: flex;
-    flex-direction: row;
+    /*border: 1px solid black;*/
+    width: 88%;
+    height: 1000px;
     padding: 2em;
     margin-top: 0.5em;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: flex-start;
       
 }
 
 .project-cards {
     border: 0.3px solid lightgray;
     border-radius: 10px;
-    height: 17em;
-    width: 20em;
+    height: 30%;
+    width: 30%;
+    color: black;
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-self: center;
-    
+    justify-content: space-evenly;
+    align-items: center;    
+}
+.project-cards:hover {
+    border: 0.3px solid #F7643B;
+    color: #F7643B;
+    transition: all 0.4s;
 }
 .img-size {
-    width: 11em;
+    width: 60%;
 }
