--- a/styles/contact.css
+++ b/styles/contact.css
@@ -19,9 +19,12 @@
     margin: 25px 0px 20px 0px;
 }
 .link-box {
-    /*border: 1px solid black;*/
+    border: transparent;
+    border-radius: 25px;
+    width: 60%;
     font-size: 1.2em;
     margin-top: 15px; 
+    padding: 5px 5px 5px 10px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -43,6 +46,9 @@
     color: white;
     transition: all 0.3s;
     }
+.link-box:active {
+    box-shadow: 0px 0px 2px 2px gray ;
+}
 .link-box:hover {
     color: #F7643B;
 }
