--- a/styles/section.css
+++ b/styles/section.css
@@ -10,35 +10,35 @@
     font-weight: 900;
 }
 .section-about {
-    width: 100vw;
+    width: 100%;
     height: 750px;
     justify-content: center;
     align-items: center;
     padding: 80px;    
 }
 .section-skills {
-    width: 100vw;
+    width: 100%;
     padding: 64px;
     justify-content: center;
     align-items: center;
     background-color: #F6F7FB;
 }
 .section-quote {
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     align-items: center;
     background-color: #F7643B;
     padding: 80px 208px 80px 208px;
 }
 .section-projects{
-    width: 100vw;
+    width: 100%;
     padding: 64px;
     justify-content: center;
     align-items: center;
 }
 .section-contact{
     padding: 50px;
-    width: 100vw;
+    width: 100%;
     background-color: #F6F7FB;
     display: flex;
     justify-content: center;
