--- a/styles/about.css
+++ b/styles/about.css
@@ -37,6 +37,24 @@
     font-weight: 500;
 }
 .imagesize {
-    width: 40%;
+    width: 500px;
     margin: 0px 50px 50px;
+}
+
+@media screen and (max-width: 1100px) {
+    .about {
+        flex-direction: column;
+        text-align: center;
+    }
+    .hello {
+        align-items: center;
+        margin: 80px 0px 60px 0px;
+    }
+    
+}
+@media screen and (max-width: 500px){
+    .imagesize {
+        width: 350px;
+    }
+
 }
