--- a/styles/section.css
+++ b/styles/section.css
@@ -11,7 +11,7 @@
 }
 .section-about {
     width: 100%;
-    height: 750px;
+    /* height: 750px; */
     justify-content: center;
     align-items: center;
     padding: 80px;    
