--- a/styles/about.css
+++ b/styles/about.css
@@ -1,11 +1,11 @@
 .about {
     /*border: 1px solid black;*/
     width: 100%;
-    height: 100vh; /*40em*/
+    /* height: 100vh 40em */
     display: flex ; 
     justify-content: space-around;
     align-items: center;
-    /*padding:0px*/
+    padding: 70px
 
 }
 .hello{
@@ -45,6 +45,7 @@
     .about {
         flex-direction: column;
         text-align: center;
+        padding: 0px;
     }
     .hello {
         align-items: center;
@@ -52,9 +53,15 @@
     }
     
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 600px){
     .imagesize {
         width: 350px;
+    }
+
+}
+@media screen and (max-width: 400px){
+    .imagesize {
+        width: 250px;
     }
 
 }
