--- a/styles/section.css
+++ b/styles/section.css
@@ -1,14 +1,3 @@
-.section-titlebox {
-    /*border: 1px solid black;*/
-    width: 45%;
-    display: flex;
-    align-items: center;
-    padding: 48px;
-}
-.section-titletext{
-    font-size: 3em;
-    font-weight: 900;
-}
 .section-about {
     width: 100%;
     /* height: 750px; */
@@ -43,4 +32,11 @@
     display: flex;
     justify-content: center;
     align-items: center;    
+}
+
+@media screen and (max-width: 600px){
+   .section-skills {
+    padding: 0px;
+   }
+   
 }
