--- a/styles/footer.css
+++ b/styles/footer.css
@@ -31,5 +31,16 @@ footer {
 .footer-text{
     color: #FCFCE4;
     padding-bottom: 40px ;
-
+}
+@media screen and (max-width: 600px){
+    .links-footer {
+     display: none ;
+    }
+    .footer-icon{
+        width: 40px;
+        height: 40px;
+        font-size: 1em;
+        padding-top: 12px;
+        margin-top: 30px;
+    }
 }
