--- a/styles/section.css
+++ b/styles/section.css
@@ -40,3 +40,22 @@
    }
    
 }
+@media screen and (max-width: 600px){
+    .section-projects {
+     padding: 0px;
+    }
+    
+}
+
+@media screen and (max-width: 600px){
+    .section-quote {
+     padding: 20px 20px 20px 20px ;
+    }
+    
+}
+@media screen and (max-width: 600px){
+    .section-contact {
+    padding: 20px;
+    }
+    
+}
