--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,34 +1,31 @@
 .projectcards-container {
-    /*border: 1px solid black;*/
     width: 88%;
     height: 1000px;
     padding: 32px;
     margin-top: 8px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
-      
+    flex-wrap: wrap;
 }
-
 .project-cards {
-    border: 0.3px solid lightgray;
-    border-radius: 10px;
     height: 30%;
     width: 30%;
     color: black;
     background-color: white;
+    border: 0.3px solid lightgray;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;    
 }
 .project-cards:hover {
-    border: 0.3px solid #F7643B;
     color: #F7643B;
+    border: 0.3px solid #F7643B;
     transition: all 0.4s;
 }
-.img-size {
+.project-imgsize {
     width: 60%;
 }
 @media screen and (max-width: 500px){
@@ -46,7 +43,7 @@
         margin-bottom: 20px;
         justify-content: space-between;
     }
-    .img-size {
+    .project-imgsize {
         width: 100%;
     }
  }
