--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,6 @@
     text-decoration: none;
     font-family: 'Raleway';
 }
-/* body{
-    height: 100%;
-    width: 100%;
-} */
 .row {
     display: flex;
     flex-direction: row;   
@@ -24,5 +20,33 @@
 .loremsize {
     font-size: 1em;
     font-weight: 500;
-    padding: 2em 3.5em 0em 3.5em;
+    padding: 32px 56px 0em 56px;
+}
+.contactbutton {
+    background-color: #F7643B;
+    padding: 8px 28px;
+    border-radius: 25px;
+}
+.buttoncolor {
+    color: white;
+}
+.weight500 {
+    font-weight: 500;
+}
+.section-titlebox {
+    width: 45%;
+    padding: 48px;
+    display: flex;
+    align-items: center;
+}
+.section-titletext{
+    font-size: 3em;
+    font-weight: 900;
+}
+
+@media screen and (max-width: 1000px) {
+    .loremsize {
+        padding: 16px 0px 0px 0px;
+    }
+    
 }
