arreglo de detalles corregidos por el profesor

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -32,6 +32,12 @@
     justify-content: center;
     align-items: center;    
 }
+@media screen and (max-width: 600px){
+    .section-about {
+     padding: 50px;
+    }
+    
+ }
 
 @media screen and (max-width: 600px){
    .section-skills {
