--- a/styles/about.css
+++ b/styles/about.css
@@ -3,13 +3,13 @@
     display: flex ; 
     justify-content: space-around;
     align-items: center;
-    padding: 70px
+    padding: 70px 50px 70px 50px
 
 }
 .hello{
     height: 100%;
     width: 50%;
-    margin-left: 35px;
+    /* margin-left: 35px; */
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -31,7 +31,7 @@
 }
 .about-imgsize {
     width: 500px;
-    margin: 0px 50px 50px;
+    margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -41,7 +41,7 @@
         flex-direction: column;
     }
     .hello {
-        margin: 80px 0px 60px 0px;
+        margin: 15px 0px 60px 0px;
         align-items: center;
         width: auto;
     }
